Aligned required fields with SURF SDS Bugfix for OrganizationGUID for SuperUser new Role

--- a/client/src/styles/forms.scss
+++ b/client/src/styles/forms.scss
@@ -32,3 +32,8 @@ section.actions {
     padding: 30px 0;
     position: relative;
 }
+
+sup.required {
+    color: var(--sds--color--red--500);
+}
+
